--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,12 @@
 numpy
 matplotlib
 seaborn
-streamlit==1.31.1
 scikit-learn==1.3.2
-openpyxl
-joblib
-pandas
 xgboost
-gdown
 plotly.express
+Flask==3.0.0
+pandas==2.0.3
+joblib==1.3.2
+gdown==4.7.1
+plotly==5.18.0
+gunicorn==21.2.0
