--- a/frontend/requirements.txt
+++ b/frontend/requirements.txt
@@ -1,1 +1,4 @@
-
+streamlit>=1.12.0
+requests>=2.28.0  # For calling your FastAPI
+plotly>=5.10.0  # For visualizations
+pandas>=1.3.0  # Only needed if you process data in the frontend
