--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,10 @@
-numpy
-matplotlib
-seaborn
-streamlit==1.31.1
-scikit-learn==1.3.2
-openpyxl
-joblib
-pandas
-xgboost
-plotly
-requests
+numpy==2.0.2
+matplotlib==3.10.0
+seaborn==0.13.2
+streamlit==1.47.1
+scikit-learn==1.7.1
+joblib==1.5.1
+pandas==2.2.2
+xgboost==3.0.2
+plotly==5.24.1
+requests==2.32.3
