--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,7 @@ matplotlib==3.10.0
 seaborn==0.13.2
 streamlit==1.48.0
 scikit-learn==1.6.1
-joblib==joblib
+joblib==1.5.1
 pandas==2.2.2
 xgboost==3.0.3
 plotly.express==5.24.1
